2013-06-06  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/connect.c: Matched the tooltips to the buttons in the
	'Join a Public Game' dialog.

2013-06-05  Micah Bunting <amnykon@gmail.com>
        * server/player.c, server/robber.c, server/develop.c, server/gold.c,
        server/turn.c, server/server.c, server/server.h, server/discard.c,
        common/map.c, common/map.h, common/random.c, common/random.h,
        common/Makefile.am: Moved random functions to common/random.c and
        common/random.h.

2013-06-05  Roland Clobus <rclobus@rclobus.nl>
	* admin-scripts/meta.sh: Updated to set the PATH variable.

2013-06-04  Roland Clobus <rclobus@rclobus.nl>
	* server/gtk/main.c, server/server.c, Makefile.am, metaserver/main.c,
	client/gtk/connect.c, docs/pioneers-metaserver.6: Use $PATH to locate
	the programs instead of hardcoded paths.

2013-05-31  Roland Clobus <rclobus@rclobus.nl>
	* docs/README.message_flow, common/gtk/select-game.c,
	common/gtk/select-game.h, common/game.c, common/game.h,
	server/gtk/main.c, metaserver/main.c, metaserver/README.protocol,
	client/gtk/offline.c, client/gtk/connect.c: Show game details in the
	client for games from the metaserver. Updated documentation of the
	metaserver protocol.

2013-05-30  Roland Clobus <rclobus@rclobus.nl>
	* editor/gtk/Makefile.am, server/gtk/Makefile.am, Makefile.am,
	client/gtk/data/Makefile.am: Don't remove the *.ico files in the
	make maintainer-clean target.

2013-05-21  Roland Clobus <rclobus@rclobus.nl>
	* Makefile.am: Use icons of 256x256, to show sharp icons on Alt-Tab.

2013-05-20  Roland Clobus <rclobus@rclobus.nl>
	* MinGW/README.txt: The MinGW build works from a clean svn checkout.
	* client/gtk/data/pioneers.svg, server/gtk/pioneers-server.svg,
	editor/gtk/pioneers-editor.svg: Resized to 48x48, thicker lines,
	refreshed computer icon, added attribution for the selections of the
	Gorilla theme by Jakub Steiner.

2013-05-19  Roland Clobus <rclobus@rclobus.nl>