@@ -1,3 +1,7 @@
+2013-06-07  Roland Clobus <rclobus@rclobus.nl>
+	* common/map.c, common/map.h, client/ai/greedy.c: Map the resource
+	to the terrain and vice versa.
+
 2013-06-06  Roland Clobus <rclobus@rclobus.nl>
 	* client/gtk/connect.c: Matched the tooltips to the buttons in the
 	'Join a Public Game' dialog.
